Source/WebCore/platform/network/ResourceResponseBase.h
@@ -27,6 +27,7 @@
 #ifndef ResourceResponseBase_h
 #define ResourceResponseBase_h
 
+#include "CacheValidation.h"
 #include "CertificateInfo.h"
 #include "HTTPHeaderMap.h"
 #include "URL.h"
@@ -160,11 +161,11 @@ protected:
     int m_httpStatusCode;
 
 private:
-    mutable double m_cacheControlMaxAge;
     mutable double m_age;
     mutable double m_date;
     mutable double m_expires;
     mutable double m_lastModified;
+    mutable CacheControlDirectives m_cacheControlDirectives;
 
 public:
     bool m_isNull : 1;
@@ -179,10 +180,6 @@ private:
     mutable bool m_haveParsedDateHeader : 1;
     mutable bool m_haveParsedExpiresHeader : 1;
     mutable bool m_haveParsedLastModifiedHeader : 1;
-
-    mutable bool m_cacheControlContainsNoCache : 1;
-    mutable bool m_cacheControlContainsNoStore : 1;
-    mutable bool m_cacheControlContainsMustRevalidate : 1;
 
     Source m_source;
 };
